# press

./: Cargo.toml  QUICKSTART.md  README.md  build.sh  run-app.sh  run-mesher.sh  run-server.sh  simplify.py  triple_inner.py
common/: Cargo.toml
common/src/: lib.rs
objects/hut/: Cargo.toml
objects/hut/src/: bin.rs  lib.rs
objects/mosquito/: Cargo.toml
objects/mosquito/src/: bin.rs  lib.rs
objects/template/: Cargo.toml  README.md
objects/template/src/: bin.rs  lib.rs
src/: bezier.rs  bin.rs  lib.rs  polygon.rs
